-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 5.0.3
-
None
-
-
3989245562dbd8f98a4e85adb89c75c1b7a1bbe3 (qt-creator/qt-creator/master)
If you use the -maxwarnings 0 parameter, there should be no limit for debug messeges in the output. This is the case if you start the test application in the traditional way. Unfortunately the above parameter does not seem to work if you launch the test from the Test View. In the Tests Explorer it is shown that you should use just the above argument - it seems to be ignored.
It doesn't seem to be anything critical, but it makes analysis more difficult if some test is not working and you add additional logs for better diagnosis and those logs are not visible. Test View is great solution because you can run only selected set of tests, but potentially missing logs make it very difficult to use in my case.
For Gerrit Dashboard: QTCREATORBUG-26637 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
323917,8 | AutoTest: Allow handling of maximum warnings for QtTest | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |