src/plugins/autotest/qtest/qttestconfiguration.cpp
@@ -76,6 +76,9 @@ QStringList QtTestConfiguration::argumentsForTestRunner(QStringList *omitted) co
     if (isDebugRunMode() && qtSettings->noCrashHandler.value())
         arguments << "-nocrashhandler";
 
+    if (qtSettings->limitWarnings.value() && qtSettings->maxWarnings.value() != 2000)
+        arguments << "-maxwarnings" << QString::number(qtSettings->maxWarnings.value());
+
     return arguments;
 }
 
